[gd_scene load_steps=10 format=3 uid="uid://baf6txcois1en"]

[ext_resource type="Texture2D" uid="uid://gblpy6lsgurk" path="res://imagem de fundo/pxfuel.jpg" id="1_ycv4g"]
[ext_resource type="Script" path="res://dificuldade.gd" id="2_6rr8r"]
[ext_resource type="FontFile" uid="uid://blilq25sl2vjn" path="res://pong_assets/BILLO___.TTF" id="3_ck30k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2ctj"]
bg_color = Color(0.313726, 0.027451, 0.356863, 0.407843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcaba"]
bg_color = Color(0.462745, 0.0627451, 0.521569, 0.407843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fs7pg"]
bg_color = Color(0.313726, 0.027451, 0.356863, 0.407843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_an8jo"]
bg_color = Color(0.462745, 0.0627451, 0.521569, 0.407843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1wrp"]
bg_color = Color(0.313726, 0.027451, 0.356863, 0.407843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ta1mn"]
bg_color = Color(0.462745, 0.0627451, 0.521569, 0.407843)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Dificuldade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_ycv4g")
expand_mode = 1

[node name="Menu" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -56.5
offset_right = 200.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
script = ExtResource("2_6rr8r")

[node name="Facil" type="Button" parent="TextureRect/Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ck30k")
theme_override_font_sizes/font_size = 49
theme_override_styles/hover = SubResource("StyleBoxFlat_u2ctj")
theme_override_styles/normal = SubResource("StyleBoxFlat_fcaba")
text = "Fácil"

[node name="medio" type="Button" parent="TextureRect/Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ck30k")
theme_override_font_sizes/font_size = 49
theme_override_styles/hover = SubResource("StyleBoxFlat_fs7pg")
theme_override_styles/normal = SubResource("StyleBoxFlat_an8jo")
text = "Médio"

[node name="dificil" type="Button" parent="TextureRect/Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ck30k")
theme_override_font_sizes/font_size = 49
theme_override_styles/hover = SubResource("StyleBoxFlat_l1wrp")
theme_override_styles/normal = SubResource("StyleBoxFlat_ta1mn")
text = "Difícil"

[node name="back" type="Button" parent="TextureRect/Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ck30k")
theme_override_font_sizes/font_size = 49
theme_override_styles/hover = SubResource("StyleBoxFlat_l1wrp")
theme_override_styles/normal = SubResource("StyleBoxFlat_ta1mn")
text = "Back"

[connection signal="pressed" from="TextureRect/Menu/Facil" to="TextureRect/Menu" method="_on_facil_pressed"]
[connection signal="pressed" from="TextureRect/Menu/medio" to="TextureRect/Menu" method="_on_medio_pressed"]
[connection signal="pressed" from="TextureRect/Menu/dificil" to="TextureRect/Menu" method="_on_menu_pressed"]
[connection signal="pressed" from="TextureRect/Menu/dificil" to="TextureRect/Menu" method="_on_dificil_pressed"]
[connection signal="pressed" from="TextureRect/Menu/back" to="TextureRect/Menu" method="_on_back_pressed"]
